<resources>
    <string name="app_name">Dialysis Check</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_register">Sign Up</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Sign me in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Sign Out</string>
    <string name="name">Fullname</string>
    <string name="essential_contacts">Essential Contacts</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mainmenu">Main Menu</string>
    <string name="calendar">Calendar</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="healthcheck">Check health</string>
    <string name="treatment">Treatment helper</string>
    <string name="profile">My Details</string>
    <string name="contacts_heading">My Essential Contacts</string>
    <string name="consultant_heading">My Consultant</string>
    <string name="consultant_name">Consultant name</string>
    <string name="consultant_number">consultant number</string>
    <string name="consultant_location">consultant location</string>
    <string name="dietitian_heading">My Dietitan</string>
    <string name="dietitian_name">Dietitian name</string>
    <string name="dietitian_number">Dietitian number</string>
    <string name="dietitian_location">dietitian location</string>
    <string name="doctor_heading">My Doctor</string>
    <string name="doctor_name">Fullname</string>
    <string name="doctor_number">Fullname</string>
    <string name="doctor_location">Fullname</string>
    <string name="ward_heading">My Ward</string>
    <string name="ward_name">Fullname</string>
    <string name="ward_number">Fullname</string>
    <string name="ward_location">Fullname</string>
    <string name="faq_heading">Frequently Asked Questions:</string>
    <string name="faq_question_heading">Q: </string>
    <string name="faq_question">Question</string>
    <string name="faq_answer_heading">A: </string>
    <string name="faq_answer">Answer</string>
    <string name="profile_heading">My Details</string>
    <string name="profile_name">My Name is: </string>
    <string name="patient_name">Name Surname</string>
    <string name="profile_id">My ID is: </string>
    <string name="patient_id">PatientID</string>
    <string name="profile_dob">Date of Birth: </string>
    <string name="patient_dob">DD/MM/YYYY </string>
    <string name="profile_allergies_true">Allergies: </string>
    <string name="profile_allergies_false">I have no allergies.</string>
    <string name="patient_allergies">Allegies</string>
    <string name="profile_access_type">Access type: </string>
    <string name="patient_access_type">Answer</string>
    <string name="hint_event_name">Event name</string>
    <string name="eventsView">Events</string>
    <string name="createEvent">New Event</string>
    <string name="changeEvent">Update event</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="hint_event_starttime">Start time</string>
    <string name="hint_event_endname">End time</string>
    <string name="hint_event_date">Date</string>
    <string name="hint_event_description">Details</string>
    <string name="Done">Done</string>
    <string name="Customized">Customized</string>
    <string name="Decorator">Decorator</string>
    <string name="Hebrew">Hebrew</string>
    <string name="Arabic">Arabic</string>
    <string name="CustomView">Custom View</string>
    <string name="Dialog">Dialog</string>
    <string name="DisplayOnly">DisplayOnly</string>
    <string name="Range">Range</string>
    <string name="Multi">Multi</string>
    <string name="Single">Single</string>
    <string name="treatment_intro_title">Welcome!</string>
    <string name="treatment_intro_heading1">You are just about to start your treatment</string>
    <string name="treatment_intro_text1">Dialysis Check will help you to prepare for your treatment and will guide you through it. Tap \"Start preparation\" to begin."</string>
    <string name="treatment_intro_startPrepButton">Start preparation</string>
    <string name="treatment_prep_hands_title">Washing hands</string>
    <string name="treatment_prep_hands_heading1">It is very important!</string>
    <string name="treatment_prep_hands_heading2">You can see how to wash your hands properly in the video below:</string>
    <string name="treatment_prep_hands_text1">Don\'t forget to wash your hands and fistula before starting treatment. Keeping hands clean is one of the most important steps you can take to avoid getting sick and spreading germs to others.</string>
    <string name="treatment_prep_fluid_title">Fluid intake</string>
    <string name="treatment_prep_fluid_heading1">Don\'t drink extra fluid during dialysis</string>
    <string name="treatment_prep_fluid_text_html"><![CDATA[<center><b>Did you know that:</b></center><p>It takes 10 hours for fluid to be absorbed from the intestine into your blood.<br>
                    An average dialysis session lasts 3-5 hours, so excess fluid and potassium consumed during dialysis will <b>not</b> be dialysed off instantly, but absorbed into your blood <b>after dialysis</b> has finished.<br>
                    <br><b><center>Check with your Renal Nurse if you are unsure how much you can drink during dialysis.</center></b><br>
                    <br>
                    <i><center>Dialysis Tip: chew ice instead of drinking water</i></p></center>]]>
    </string>
    <string name="treatment_prep_food_title">Food</string>
    <string name="treatment_prep_food_heading1">Avoid high potassium rich foods!</string>
    <string name="treatment_prep_food_text_html"><![CDATA[If you tend to have high blood potassium levels,limit potassium rich foods like <b>dried fruit</b>, <b>milk and yoghurt</b>, <b>chocolate</b>, <b>nuts</b> and <b>potato crisps.</b>
                    Good nutrition is very important for haemodialysis.
                    <p><center><b>Suitable snacks include:</b></center><br>
                    Sandwiches with meat, fish, chicken, egg or cheese(remember to take phosphate binders with these foods),
                    plain butter or sponge cake,
                    a serve of lower potassium fruit (e.g. an apple, mandarin),
                    rice cakes or crackers, cracker bread with margarine, jam or cheese,
                    sweet, jam or cream-filled biscuits.</p>
                    <p><center><b>Did you know that:</b><br>
                     It takes at least 5 hours for potassium to be absorbed into your blood – even longer for high fat foods (e.g. chocolate, crisps)</p>
                     </center>]]>
         </string>
    <string name="treatment_prep_nextStepButton">Next step</string>
    <string name="treatment_prep_startTreatmentButton">Start preparation</string>
    <string name="treatment_debrief_title">Shall we start?</string>
    <string name="treatment_debrief_heading1">You are ready to begin treatment!</string>
    <string name="treatment_debrief_text1">Sit back and relax, the nurse will be with you in a moment. To start treatment, press the button below.</string>
    <string name="treatment_debrief_startTreatmentButton">Start Treatment</string>
    <string name="treatment_second_stage_timer_title">Setting dialysis timer</string>
    <string name="treatment_second_stage_timer_heading">Let\'s set a timer for your treatment</string>
    <string name="treatment_second_stage_timer_text1">When you are connected to the dialyser, press the button below to set the treatment time.</string>
    <string name="treatment_second_stage_timerButton">Set timer</string>
    <string name="treatment_second_stage_title">Dialysis in progress...</string>
    <string name="treatment_second_stage_heading1">You have</string>
    <string name="treatment_second_stage_heading2">left</string>
    <string name="treatment_second_stage_heading3">before your treatment finishes</string>
    <string name="treatment_second_stage_abandonButton">Abandon treatment</string>
    <string name="treatment_second_stage_abandonToast">Are you sure that you want to abandon your treatment? </string>
    <string name="treatment_finished_title">Well done!</string>
    <string name="treatment_finished_heading">Your treatment is finished</string>
    <string name="treatment_finished_text">Record your weight and blood pressure readings now. Don\'t forget to pass these readings to your nurse before leaving.</string>
    <string name="healthcheck_title">Check health</string>
    <string name="healthcheck_last_check">Last checked:</string>
    <string name="healthcheck_test_history">Lab test history</string>
    <string name="healthcheck_test_viewGraphs">View graphs</string>
    <string name="healthcheck_test_description">You can check your health by tapping \"Check Health\" or view medical history in graphs by tapping \"View Graphs\"</string>
    <string name="healthcheck_heading">Health Check Result:</string>
    <string name="healthcheck_verdict">Passed</string>
    <string name="healthcheck_details_heading">Check details:</string>
    <string name="healthcheck_date_added">Date added:</string>
    <string name="healthcheck_serum_creatine">Serum creatine:</string>
    <string name="healthcheck_date_gfr">Glomerular Filtration Rate:</string>
    <string name="healthcheck_date_bun">Blood Urea Nitrogen:</string>
    <string name="healthcheck_date_urine_protein">Urine Protein:</string>
    <string name="healthcheck_date_microalbuminuria">Microalbuminuria:</string>
    <string name="healthcheck_date_urine_creatinine">Urine Creatinine:</string>
    <string name="healthcheck_date_serum_albumin">Serum Albumin:</string>
    <string name="healthcheck_date_serum_npna">nPNA:</string>
    <string name="healthcheck_date_serum_sga">Subjective Global Assessment:</string>
    <string name="healthcheck_date_hemoglobin">Hemoglobin:</string>
    <string name="healthcheck_date_hematocrit">Hematocrit:</string>
    <string name="healthcheck_date_tsat">TSAT:</string>
    <string name="healthcheck_date_serum_ferritin">Serum Ferritin:</string>
    <string name="healthcheck_date_pth">Parathyroid Hormone:</string>
    <string name="healthcheck_date_calcium">Calcium:</string>
    <string name="healthcheck_date_phosphorus">Phosphorus:</string>
    <string name="healthcheck_date_potassium">Potassium:</string>
    <string name="healthcheck_date_bodyweight">Body weight:</string>
    <string name="healthcheck_date_blood_pressure">Blood pressure:</string>
    <string name="healthcheck_date_total_cholesterol">Total Cholesterol:</string>
    <string name="healthcheck_date_blood_hdl_cholesterol">HDL Cholesterol:</string>
    <string name="healthcheck_date_blood_ldl_cholesterol">LDL Cholesterol:</string>
    <string name="healthcheck_date_blood_hdl_triglyceride">Triglyceride:</string>
    <string name="healthcheck_date_added_desc">Date when lab results were added</string>
    <string name="healthcheck_serum_creatine_desc">Creatinine is a waste product in your blood that comes from muscle activity. It is normally removed from your blood by your kidneys, but when kidney function slows down, the creatinine level rises. Your doctor should use the results of your serum creatinine test to calculate your GFR.</string>
    <string name="healthcheck_date_gfr_desc">Your GFR tells how much kidney function you have. It may be estimated from your blood level of creatinine. If your GFR falls below 30 you will need to see a kidney disease specialist (called a nephrologist), Your kidney doctor will speak to you about treatments for kidney failure like dialysis or kidney transplant. A GFR below 15 indicates that you need to start one of these treatments.</string>
</resources>