<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/btn_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp" >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/login_background_image"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/bg_login"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dip"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dp"
            android:background="@color/emailEditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_person_white_18dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/passwordEditText"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_lock_white_18dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>